--- a/css/main.sass
+++ b/css/main.sass
@@ -13,6 +13,7 @@
 @import '_frontend'
 @import '_backend'
 @import '_mobile'
+@import '_games'
 @import '_db'
 @import '_devops'
 @import '_methodologies'
